--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       </size>
       <h2>Namaskaram 🙏🏻 </h2>
-      <p class="welcome-para">Welcome to My First wedsite, Which I made using HTML & Css.</p>
+      <p class="welcome-para">Welcome to My First Website, Which I made using HTML & Css.</p>
     </div>
     <hr>
 
