--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <h2>Get In Touch</h2>
   <h3> 🙏🏻Thank You So Much For Visiting My Site🙏🏻 </h3>
   <p class="feedback-para">Please be free to give a feedback for site and Advice to my programming career. </p>
-  <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+  <a class="btn" href="sanamanda.karthik@gmail.com">CONTACT ME</a>
 </div>
 </div>
 <div class="bottom-container">
